--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@ button.join {
   padding: 80px 16px 8px 16px;
 }
 
-.footer {
+.footer{
   background-color: rgb(245, 245, 245);
 }
 
@@ -1450,7 +1450,66 @@ a {
     display: flex;
     align-items: center;
 }
-  .free_one{
+  .careers ul{
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    color: rgb(51, 51, 51);
+    float: left;
+    line-height: 21px;
+    padding: 20px 0px;
+  }
 
+  .careers a{
+    box-sizing: border-box;
+    color: rgb(91, 103, 128);
+    font-size: 14px;
+    font-weight: 400;
+    height: 24px;
+    padding: 3px 10px;
+  }
+
+  a.log_in {
+    color: rgb(0, 98, 228);
+  }
+
+  a.join_li{
+    border: 1px solid rgb(0, 86, 210);
+    padding: 10px 4px;
+    color: rgb(0, 86, 210);
+    min-width: 88px;
+    height: 38px;
+    font-weight: 700;
+    font-family: "project";
+    border-radius: 4px;
+  }
+
+
+  .topics{
+    margin: 0px 26.938px 75px 26.938px;
+  }
+
+}
+
+
+@media screen and (min-width:1440px) {
+  .questions{
+    /* margin-inline: 162px; */
+    max-width: 1116px;
+    margin: 0 auto;
+  }
+
+  .footer_whole{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .apple_img{
+    padding-bottom: 51.828px;
+  }
+
+  .play_img{
+    padding-bottom: 51.828px;
   }
 }
+
