--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ button.join {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  margin-bottom: 40px;
 }
 
 .course_cataloge h2 {
@@ -827,7 +826,6 @@ button.join {
 
 li {
   list-style-type: none;
-  /* margin-bottom: 7px; */
 }
 
 a {
@@ -921,6 +919,143 @@ a {
   line-height: 28px;
   font-family: "project";
 }
+
+.close_span{
+  align-items: center;
+  box-sizing: border-box;
+  color: rgb(0, 86, 210);
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  letter-spacing: 0.16px;
+  line-height: 24px;
+  text-align: center;
+  width: 66.0938px;
+  border: 1px solid transparent;
+  background-color: #fff;
+}
+
+.grid_span{
+  text-align: inherit;
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    align-items: flex-start;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    z-index: 1;
+    width: 337px;
+    background-color: #fff;
+    border: 1px solid transparent;
+}
+
+.label_group span{
+  margin: 0;
+  color: rgb(15, 17, 20);
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: -0.048px;
+  line-height: 20px;
+  font-family: "project";
+}
+
+.span_grid{
+  display: flex;
+}
+
+span.span_grid{
+  display: flex;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  letter-spacing: normal;
+  color: rgb(91, 103, 128);
+  margin-top: 4px;
+  flex-direction: row;
+  align-items: flex-start;
+  flex-shrink: 1;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  font-family: "pro";
+}
+
+.grid_span_a{
+    flex-shrink: 0;
+    color: inherit;
+    padding: 0px;
+    margin: 2px 12px 0px 0px;
+    transition-property: transform;
+    transition-duration: 150ms;
+    transition-timing-function: ease-in-out;
+    transform: rotate(0deg);
+}
+
+.information_tech{
+  position: relative;
+    margin: 0px;
+    padding: 2px;
+}
+button.apply{
+  align-items: center;
+  appearance: button;
+  background-color: rgb(0, 86, 210);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  border-top-width: (0, 86, 210) 0px 0px;
+  color: rgb(255, 255, 255);
+  padding: 12px 32px;
+}
+
+button.clear_all{
+  align-items: center;
+  appearance: button;
+  background-color: rgb(255, 255, 255); 
+  border: 1px solid  rgb(0, 86, 210);
+  border-radius: 4px;
+  border-top-width: (0, 86, 210) 0px 0px;
+  color: rgb(0, 86, 210);
+  outline-color: rgb(0, 86, 210);
+  padding: 12px 32px;
+}
+
+.apply_clear{
+    /* position: fixed; */
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 3;
+    background-color: white;
+    border-top: 1px solid rgb(235, 236, 237);
+    padding: 12px 0px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.filter_two{
+  display: none;
+}
+
+.filter_button{
+  margin-bottom: 24px;
+}
+
+.filter_two_active{
+  background-color: white;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  overflow-y: scroll;
+  height: 100%;
+  z-index: 4000;
+  display: initial;
+  padding: 16px 16px 80px;
+}
+
 
 @media screen and (min-width: 600px) {
   .learn {
