--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ button.join {
   font-size: 20px;
   line-height: 28px;
   letter-spacing: -0.1px;
-  padding: 24px 0px;
+  padding: 24px 0px 25px 0px;
   font-family: "project";
 }
 
@@ -559,16 +559,17 @@ button.join {
   margin: 0 2px;
 }
 .summary {
-  margin-bottom: 48px;
+  /* margin-bottom: 48px; */
   box-sizing: border-box;
   color: rgb(55, 58, 60);
   display: flex;
   flex-wrap: wrap;
   font-size: 16px;
   line-height: 24px;
-  max-width: 1110px;
+  /* max-width: 1110px; */
   padding-inline: 30px;
   padding-bottom: 36px;
+  margin: 48px 0px;
 }
 
 .popular h2 {
@@ -577,7 +578,7 @@ button.join {
   font-family: "project";
   font-size: 20px;
   margin-bottom: 24px;
-  margin-top: 48px;
+  /* margin-top: 48px; */
   line-height: 28px;
   letter-spacing: -0.1px;
 }
@@ -1384,6 +1385,7 @@ button.clear_all{
     display: flex;
     cursor: pointer;
     word-break: break-word;
+    line-height: 20px;
   }
   
   .checkbox input{
@@ -1445,7 +1447,6 @@ button.clear_all{
   }
 
   .common{
-    /* padding: 24px 0px; */
     padding-bottom: 24px;
   }
   .cataloge{
@@ -1487,7 +1488,6 @@ button.clear_all{
   .right_arrow svg{
     margin-right: 16px;
   }
-  
   
 }
 
