--- a/style.css
+++ b/style.css
@@ -566,7 +566,7 @@ button.join {
   flex-wrap: wrap;
   font-size: 16px;
   line-height: 24px;
-  /* max-width: 1110px; */
+  max-width: 1110px;
   padding-inline: 30px;
   padding-bottom: 36px;
   margin: 48px 0px;
@@ -1375,7 +1375,6 @@ button.clear_all{
     color: rgb(55, 58, 60);
     font-size: 16px;
     line-height: 24px;
-    /* min-width: max-content; */
   }
 
   .label{
@@ -1460,7 +1459,7 @@ button.clear_all{
     margin-bottom: 36px;
   }
   .english_whole ul {
-    padding-left: 6px;
+    padding-left: 3px;
     margin-bottom: 44px;
   }
 
@@ -1495,7 +1494,10 @@ button.clear_all{
   .right_arrow svg{
     margin-right: 16px;
   }
-  
+  .footer{
+    padding-inline: 48px;
+  }
+   
 }
 
 @media screen and (min-width:1025px) {
@@ -1512,7 +1514,7 @@ button.clear_all{
 
 @media screen and (min-width:1036px) {
   .common{
-    padding: 24px 6px;
+    padding: 20px 6px 20px 6px;
   }
   .header_individual{
     display: none;
@@ -1611,7 +1613,7 @@ button.clear_all{
   }
   .container_login{
     display: flex; 
-    padding:0px 48px; 
+    padding:0px 58px 0px 48px; 
     align-items: center;
   }
 
@@ -1692,6 +1694,7 @@ button.clear_all{
     font-size: 16px;
     color: rgb(99, 103, 107);
     font-family: "pro";
+    padding: unset;
   }
   .search-btn{
     position: absolute;
@@ -1887,8 +1890,17 @@ button.clear_all{
     display:block;
   }
 
-}
+  .course_cataloge h2{
+    margin-top: 8px;
+    margin-bottom: 16px;
+    margin-left: 4px;
+  }
 
+  .explore_free_course{
+    padding: 4px 7px 8px 7px;
+  }
+
+}
 
 @media screen and (min-width:1440px) {
   .questions{
@@ -1940,5 +1952,15 @@ button.clear_all{
   }
   .filter_two {
     display: none;
+  }
+
+  /* .common{
+    padding: 0px 6px;
+  } */
+  
+  .course_cataloge h2{
+    margin-top: 8px;
+    margin-bottom: 16px;  
+    margin-left: 3px;
   }
 }
