--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
   src: url(font/source-sans-pro-v14-latin-700.woff2);
 }
 
+
+/* -------------------body------------------ */
+
+
 .aws.learn {
   display: none;
 }
