--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* -----------------------font------------------- */
+
 @font-face {
   font-family: "regular";
   src: url(font/opensans-regular.woff2);
