--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ button.join {
   display: flex;
   align-items: center;
   margin: 0px 16px 0px 0px;
-}
+}------------------------------------------------------
 
 .course_div {
   display: block;
